--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "framer-motion": "^11.2.10",
     "sonner": "^1.4.0",
     "zustand": "^4.5.0"
   },
