--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.45.0",
     "@vapi-ai/web": "^2.0.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.544.0",
     "next": "14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "framer-motion": "^11.2.10",
     "sonner": "^1.4.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
