--- a/.env.production.example
+++ b/.env.production.example
@@ -13,8 +13,8 @@
 # 1. If backend is deployed: Use your production backend URL
 # 2. If backend not ready yet: Leave as placeholder (frontend will use Supabase fallback)
 
-NEXT_PUBLIC_API_BASE_URL=https://api.feasable.org
-NEXT_PUBLIC_AGENT_API_BASE=https://agent.feasable.org
+NEXT_PUBLIC_API_BASE_URL=https://api.luno.org
+NEXT_PUBLIC_AGENT_API_BASE=https://agent.luno.org
 
 
 # ========================================
