--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "feasabledepartments-frontend",
+  "name": "lunoSpaces-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,18 +11,24 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.45.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@vapi-ai/web": "^2.0.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.544.0",
     "next": "14.2.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
